--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,8 +7,9 @@ readme = "README.md"
 packages = [{include = "jogo_bruno_ricardo"}]
 
 [tool.poetry.dependencies]
-python = "^3.12"
+python = "<3.14,>=3.8"
 pygame = "^2.6.1"
+pyinstaller = "^6.12.0"
 
 
 [build-system]
